--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -22,7 +22,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.2/simple-lightbox.modules.min.js"
     integrity="sha512-l8+w58XziwSagJ91ITYFQbZM5EsiE3VX675jWejWVFR8gMWAJcnZ28DElN8lS3L24RDnFEVDqDZLpsU/iXPq4g=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="js/02-lightbox.js" type="module"></script>
+  <script src="./02-lightbox.js" type="module"></script>
 </body>
 
 </html>
