update light box link task 2

--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -19,8 +19,8 @@
 
   <!-- Add gallery items to this list -->
   <ul class="gallery"></ul>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.2/simple-lightbox.modules.min.js"
-    integrity="sha512-l8+w58XziwSagJ91ITYFQbZM5EsiE3VX675jWejWVFR8gMWAJcnZ28DElN8lS3L24RDnFEVDqDZLpsU/iXPq4g=="
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.2/simple-lightbox.min.js"
+    integrity="sha512-/4kQE5RJQYHRhUiK+CZS8UhaJTnLmQkDuf8lOhiP2xLdjthA/rm0VqqWjcyelIx+NDyNHFmtqvuIgOFQnI34WA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="./02-lightbox.js" type="module"></script>
 </body>
